--- a/3.html
+++ b/3.html
@@ -52,9 +52,11 @@ that people with eczema can do to support skin health and alleviate symptoms, su
 <p style="margin-top:30px;">
 Even though the condition itself is not yet curable, there should be a particular treatment plan to suit each person with different symptoms. Even after an area of skin has healed,
 it is important to keep looking after it, as it may easily become irritated again.
+<br><br>
 </p>
 
-
+<p>
+<script id="dsq-count-scr" src="//eczema1.disqus.com/count.js" async></script>
+</p>
 </body>
-
 </html>
