--- a/3.html
+++ b/3.html
@@ -49,14 +49,33 @@ that people with eczema can do to support skin health and alleviate symptoms, su
 <li><strong>Barrier repair moisturizers</strong> : These reduce water loss and work to repair the skin.
 <li><strong>Phototherapy</strong> : This involves exposure to ultraviolet A or B waves, alone or combined. The skin will be monitored carefully. This method is normally used to treat moderate dermatitis.
 </ul>
-<p style="margin-top:30px;">
+<p style="margin-top:30px margin-bottom:30px;">
 Even though the condition itself is not yet curable, there should be a particular treatment plan to suit each person with different symptoms. Even after an area of skin has healed,
 it is important to keep looking after it, as it may easily become irritated again.
-<br><br>
+
 </p>
 
 <p>
-<script id="dsq-count-scr" src="//eczema1.disqus.com/count.js" async></script>
+  <div id="disqus_thread"></div>
+  <script>
+
+  /**
+  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+  var disqus_config = function () {
+  this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  */
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = 'https://eczema1.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
 </body>
 </html>
